[tool.poetry]
name = "ak-47"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pyfiglet = "^0.8.post1"
telebot = "^0.0.4"
user-agent = "^0.1.9"
colorama = "^0.4.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
